# user-managment-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  logger_config.py  logging.conf  main.py  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 2024_06_26_1221-67360915b4ad_create_tables.py  2024_07_01_1223-47ac71616f70_create_tables.py  2024_07_02_0117-9104e9d96fbe_create_tables.py  2024_07_02_0854-717103bc17a2_create_tables.py  2024_07_03_1539-e2e819a8a888_create_tables.py  2024_07_03_2016-2ebadfcf85a5_create_all_tables.py  2024_07_06_0101-31be9d258c64_fix_user_fields.py  ca8cb7d2ec16_create_tables.py
app/: main.py
app/adapters/: utils.py
app/adapters/config/: config.py
app/adapters/controllers/: auth.py  users.py
app/adapters/gateways/: db_helper.py
app/config/: config.py  exceptions.py  logger_config.py
app/dependencies/: db_helper.py  dependencies.py
app/domain/: exceptions.py
app/domain/entities/: group.py  pagination.py  role.py  user.py
app/domain/models/: __init__.py  base.py  group.py  role.py  user.py
app/models/: __init__.py  group.py  role.py  user.py
app/repositories/: base.py  exceptions.py  user.py  user_repo.py
app/tests/domain/: test_user_create.py
app/use_cases/: auth_usecases.py  user_usecases.py
